using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Games.Models
{
    public enum ColorType{
        None=0,
        Black=1,
        White=2,
        Red=3,
        Blue=4,
        SuperBlack=11,
        SuperWhite=12,
    }
}